syntax = "proto3";

package qan;

// This option is used to set the default error response for all Swagger APIs generated from this file.
// See also header.json.
// It has to be copy&pasted into each file.
option (grpc.gateway.protoc_gen_swagger.options.openapiv2_swagger) = {
  responses: {
    key: "default"
    value: {
      description: "An error response."
      schema: {
        json_schema: {
          ref: "#/definitions/qanpbErrorResponse"
        }
      }
    }
  }
};
option go_package = "qanpb";

import "google/api/annotations.proto";
import "protoc-gen-swagger/options/annotations.proto";
import "qanpb/qan.proto";

// Metrics serves agregated metrics filtered by given dimention value and period.
service Metrics {
  // GetMetrics gets map of metrics for specific filtering.
  rpc GetMetrics(MetricsRequest) returns (MetricsReply) {
    option (google.api.http) = {
      post: "/v1/qan/GetMetrics"
      body: "*"
    };
  }
}

// MetricsRequest defines filtering of metrics for specific value of dimention (ex.: host=hostname1 or queryid=1D410B4BE5060972.
message MetricsRequest {
  string period_start_from = 1;
  string period_start_to = 2;
  string filter_by = 3; // dimention: queryid | host ...
  string group_by = 4; // one of dimention
  repeated MapFieldEntry labels = 5;
  repeated string include_only_fields = 6;
}

// MapFieldEntry allows to pass labels/dimentions in form like {"d_server": ["db1", "db2"...]}.
message MapFieldEntry {
  string key = 1;
  repeated string value = 2;
}

// MetricsReply defines metrics for specific value of dimention (ex.: host=hostname1 or queryid=1D410B4BE5060972.
message MetricsReply {
  string queryid = 1; // md5 of digest_text
  string fingerprint = 2; // digest_text - query signature. Query without values.
  // Dimension Group.
  repeated string d_servers = 3;
  repeated string d_databases = 4;
  repeated string d_schemas = 5;
  repeated string d_usernames = 6;
  repeated string d_client_hosts = 7;
  string first_seen = 8;
  string last_seen = 9;
  map<string, string> labels = 10;
  string agent_uuid = 11;
  int64 period_start = 12;
  uint32 period_length = 13;
  string example = 14;
  ExampleFormat example_format = 15;
  uint32 is_truncated = 16;
  ExampleType example_type = 17;
  string example_metrics = 18;
  // Metrics.
  float num_queries_with_warnings = 19;
  // {code: count }
  map<uint32, float> warnings = 20;
  float num_queries_with_errors = 21;
  // {code: count }
  map<uint32, float> errors = 22;
  float num_queries = 23;
  float m_query_time_cnt = 24;
  float m_query_time_sum = 25;
  float m_query_time_min = 26;
  float m_query_time_max = 27;
  float m_query_time_p99 = 28;
  float m_lock_time_cnt = 29;
  float m_lock_time_sum = 30;
  float m_lock_time_min = 31;
  float m_lock_time_max = 32;
  float m_lock_time_p99 = 33;
  float m_rows_sent_cnt = 34;
  float m_rows_sent_sum = 35;
  float m_rows_sent_min = 36;
  float m_rows_sent_max = 37;
  float m_rows_sent_p99 = 38;
  float m_rows_examined_cnt = 39;
  float m_rows_examined_sum = 40;
  float m_rows_examined_min = 41;
  float m_rows_examined_max = 42;
  float m_rows_examined_p99 = 43;
  float m_rows_affected_cnt = 44;
  float m_rows_affected_sum = 45;
  float m_rows_affected_min = 46;
  float m_rows_affected_max = 47;
  float m_rows_affected_p99 = 48;
  float m_rows_read_cnt = 49;
  float m_rows_read_sum = 50;
  float m_rows_read_min = 51;
  float m_rows_read_max = 52;
  float m_rows_read_p99 = 53;
  float m_merge_passes_cnt = 54;
  float m_merge_passes_sum = 55;
  float m_merge_passes_min = 56;
  float m_merge_passes_max = 57;
  float m_merge_passes_p99 = 58;
  float m_innodb_io_r_ops_cnt = 59;
  float m_innodb_io_r_ops_sum = 60;
  float m_innodb_io_r_ops_min = 61;
  float m_innodb_io_r_ops_max = 62;
  float m_innodb_io_r_ops_p99 = 63;
  float m_innodb_io_r_bytes_cnt = 64;
  float m_innodb_io_r_bytes_sum = 65;
  float m_innodb_io_r_bytes_min = 66;
  float m_innodb_io_r_bytes_max = 67;
  float m_innodb_io_r_bytes_p99 = 68;
  float m_innodb_io_r_wait_cnt = 69;
  float m_innodb_io_r_wait_sum = 70;
  float m_innodb_io_r_wait_min = 71;
  float m_innodb_io_r_wait_max = 72;
  float m_innodb_io_r_wait_p99 = 73;
  float m_innodb_rec_lock_wait_cnt = 74;
  float m_innodb_rec_lock_wait_sum = 75;
  float m_innodb_rec_lock_wait_min = 76;
  float m_innodb_rec_lock_wait_max = 77;
  float m_innodb_rec_lock_wait_p99 = 78;
  float m_innodb_queue_wait_cnt = 79;
  float m_innodb_queue_wait_sum = 80;
  float m_innodb_queue_wait_min = 81;
  float m_innodb_queue_wait_max = 82;
  float m_innodb_queue_wait_p99 = 83;
  float m_innodb_pages_distinct_cnt = 84;
  float m_innodb_pages_distinct_sum = 85;
  float m_innodb_pages_distinct_min = 86;
  float m_innodb_pages_distinct_max = 87;
  float m_innodb_pages_distinct_p99 = 88;
  float m_query_length_cnt = 89;
  float m_query_length_sum = 90;
  float m_query_length_min = 91;
  float m_query_length_max = 92;
  float m_query_length_p99 = 93;
  float m_bytes_sent_cnt = 94;
  float m_bytes_sent_sum = 95;
  float m_bytes_sent_min = 96;
  float m_bytes_sent_max = 97;
  float m_bytes_sent_p99 = 98;
  float m_tmp_tables_cnt = 99;
  float m_tmp_tables_sum = 100;
  float m_tmp_tables_min = 101;
  float m_tmp_tables_max = 102;
  float m_tmp_tables_p99 = 103;
  float m_tmp_disk_tables_cnt = 104;
  float m_tmp_disk_tables_sum = 105;
  float m_tmp_disk_tables_min = 106;
  float m_tmp_disk_tables_max = 107;
  float m_tmp_disk_tables_p99 = 108;
  float m_tmp_table_sizes_cnt = 109;
  float m_tmp_table_sizes_sum = 110;
  float m_tmp_table_sizes_min = 111;
  float m_tmp_table_sizes_max = 112;
  float m_tmp_table_sizes_p99 = 113;
  // boolean metrics
  float m_qc_hit_cnt = 114;
  float m_qc_hit_sum = 115;
  float m_full_scan_cnt = 116;
  float m_full_scan_sum = 117;
  float m_full_join_cnt = 118;
  float m_full_join_sum = 119;
  float m_tmp_table_cnt = 120;
  float m_tmp_table_sum = 121;
  float m_tmp_table_on_disk_cnt = 122;
  float m_tmp_table_on_disk_sum = 123;
  float m_filesort_cnt = 124;
  float m_filesort_sum = 125;
  float m_filesort_on_disk_cnt = 126;
  float m_filesort_on_disk_sum = 127;
  float m_select_full_range_join_cnt = 128;
  float m_select_full_range_join_sum = 129;
  float m_select_range_cnt = 130;
  float m_select_range_sum = 131;
  float m_select_range_check_cnt = 132;
  float m_select_range_check_sum = 133;
  float m_sort_range_cnt = 134;
  float m_sort_range_sum = 135;
  float m_sort_rows_cnt = 136;
  float m_sort_rows_sum = 137;
  float m_sort_scan_cnt = 138;
  float m_sort_scan_sum = 139;
  float m_no_index_used_cnt = 140;
  float m_no_index_used_sum = 141;
  float m_no_good_index_used_cnt = 142;
  float m_no_good_index_used_sum = 143;
  // mongo metrics
  float m_docs_returned_cnt = 144;
  float m_docs_returned_sum = 145;
  float m_docs_returned_min = 146;
  float m_docs_returned_max = 147;
  float m_docs_returned_p99 = 148;
  float m_response_length_cnt = 149;
  float m_response_length_sum = 150;
  float m_response_length_min = 151;
  float m_response_length_max = 152;
  float m_response_length_p99 = 153;
  float m_docs_scanned_cnt = 154;
  float m_docs_scanned_sum = 155;
  float m_docs_scanned_min = 156;
  float m_docs_scanned_max = 157;
  float m_docs_scanned_p99 = 158;
}
